# flask_app

./: Makefile  pyproject.toml  users.txt
lesson_ws/: example.py  router.py
lesson_ws/data/: users.json  users.py  users.txt
lesson_ws/templates/: index.html  test.html
lesson_ws/templates/users/: delete.html  edit.html  index.html  login.html  new.html  show.html
