[tool.poetry]
name = "lesson-ws"
version = "0.1.0"
description = ""
authors = ["e.panin <fath34d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
ipython = "^8.20.0"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
